--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: KongJak
+name: Kongjak
 
 # Short bio or description (displayed in the header)
 description: Android Application, Kernel, Web Developer
